Adapt enabling of continuous testing to new DEV UI